--- a/src/main/resources/static/HTML/about.html
+++ b/src/main/resources/static/HTML/about.html
@@ -22,24 +22,264 @@
 </head>
 
 <body id="about">
-	<div class="g_about-container" v-html="detailes.content"></div>
+	<div class="g_about-container">
+		尊敬的参展商：<br>
+      欢迎贵公司参加2020年(第23届)中国国际燃气、供热技术与设备展览会。为了使参展企业顺利完成各项参展筹备工作，及时了解展会的各项要求和安排，我们编写了《参展商手册》及《搭建商手册》。作为参展的重要指导性文件，请您在参展前务必认真阅读本手册包含的展会流程、布展、展期、撤展、食宿交通和展品运输等方面的信息，并按照手册要求在规定的时间内做好各项参展准备工作；展位特装企业须将《搭建商手册》内容告知所选定的装修公司并要求其严格遵守并执行；所有表格一经参展商签名确认，具有与合同同等的约束力。手册的所有内容均可在展会官网www.gaschina2020.com、展览会微信小程序、展会群内查询。如需更详细的信息或帮助，请直接与我们联系。<br><br>
+
+谨祝贵公司参展顺利，展出成功！
+<p class="g_luokuan">中国城市燃气展协会</p>
+		<video src="movie.mp4" poster="images/g_13.jpg" controls></video>
+	</div>
+	<div class="g_about-nav">
+		<div class="g_nav-box">
+			<ul>
+				<li class="g_nav-dqys">
+					<a href="javascript:void(0)" title="">展会介绍</a>
+				</li>
+				<li>
+					<a href="javascript:void(0)" title="">综合资料</a>
+				</li>
+				<li>
+					<a href="javascript:void(0)" title="">展会日程</a>
+				</li>
+				<li>
+					<a href="javascript:void(0)" title="">住宿交通</a>
+				</li>
+				<li>
+					<a href="javascript:void(0)" title="">主办方信息</a>
+				</li>
+				<li>
+					<a href="javascript:void(0)" title="">服务商信息</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="g_about-article">
+		<div class="g_about-head">展会介绍</div>
+		<div class="g_about-content">
+		　　由中国城市燃气协会主办的国际燃气技术与设备展览会自1994年举办以来已历经22届，自2001年开始成为燃气协会每年都举办的例展。这二十多年，展会逐渐走向成熟，展览面积从1994年的3,500平方米增长到2019年34,000平方米，其间得到了国家住房和城乡建设部主管部门和相关领导的大力支持，更得到了所有参展企业的关心与支持，使得“GAS CHINA”这一展会品牌在业内享有很高的知名度，也得到了国外燃气行业同仁的认可，成为国内燃气行业规模最大的综合性专业展会。在此，我们对所有支持过、关心过、参与过展会的企业和个人表示衷心的感谢！<br>
+		　　2020年(第23届)中国国际燃气、供热技术与设备展览会，将于2020年11月4日-11月6日将在成都世纪城新国际会展中心举办。自2011年在成都成功举办后，时隔9年，行业同仁将再次聚首成都世纪城新国际会展中心，展览会规模从2007年的8000平米扩大至2020年的全馆46400平米，展览会规模的扩大，更意味着国内外展商对展会的深度认可。作为国内规模最大的综合性专业展览会，更为国内燃气企业展示实力、宣传民族品牌、与国际先进技术接轨搭建了平台。<br>
+		　　在此我们向所有相关企业发出诚挚的邀请，欢迎你们参加本届展会，我们必将以优质的服务回馈所有参展企业，为促进我国燃气的发展、加强国内、外的技术交流与合作而努力。
+		</div>
+	</div>
+	<div class="g_about-article">
+		<div class="g_about-head">综合资料</div>
+		<div class="g_about-content">
+			1.展会名称：2020(第23届)年中国国际燃气、供热技术与设备展览会
+			GAS & HEATING CHINA 2020<br>
+			2.时 间：2020年11月4日—6日 <br>
+			Date : November 4—6,2020<br>
+			3.地 点：成都世纪城新国际会展中心<br>
+			Venue: Chengdu century city - new international convention and exhibition center <br>
+			4.地址：成都市高新区世纪城路198号 <br>
+			Address: 198 Century City Road，hi-tech Zone，Chengdu City<br>
+			5.主办单位：中国城市燃气协会 <br>
+			Organizer: China Gas Association<br>
+			6.官方网站：http://www.gaschina2020.com<br>
+			7.展览会微信小程序
+		</div>
+		<div class="g_about-code01">
+			<img src="images/g_14.jpg" alt="">
+			<p>扫一扫识别</p>
+		</div>
+	</div>
+	<div class="g_about-article">
+		<div class="g_about-head">展会日程</div>
+		<div class="g_about-timeline">
+			<p class="g_timeline-head">— 展会运营时间一览表 —</p>
+			<ul>
+				<li>
+					<p class="g_timeline-name">参展商报到时间</p>
+					<span class="g_timeline-date">2020年11月2日-3日</span>
+					<span class="g_timeline-time">时间：9:00-17:30</span>
+					<p class="g_timeline-address">地点：主办单位办公室</p>
+					<div class="g_timeline-remarks">
+						<b>备注：</b>参展商报到提供办理人本人身份证及本人名片<br>（如无名片请提供单位证明）
+					</div>
+				</li>
+				<li>
+					<p class="g_timeline-name">参展商布展时间</p>
+					<span class="g_timeline-date">2020年11月3日</span>
+					<span class="g_timeline-time">时间：8:30—21:00</span>
+					<div class="g_timeline-remarks">
+						<b>备注：</b>根据当地公安、消防安全规定，参展商3日方可 进馆查看展位搭建情况及布展，需自备安全帽。 若有变化，以官方通告为准。
+					</div>
+				</li>
+				<li>
+					<p class="g_timeline-name">展会开放时间</p>
+					<span class="g_timeline-date">2020年11月4日-6日</span>
+					<p class="g_timeline-address">参展商：(4日-5日）8:30—17:00  （6日）8:30-14:00</p>
+					<p class="g_timeline-address">观众:  (4日-5日）9:00—16:30   （6日）9:00-12:00</p>
+					<div class="g_timeline-remarks">
+						<b>备注：</b>若有变化，以官方通告为准
+					</div>
+				</li>
+				<li>
+					<p class="g_timeline-name">展会撤展时间</p>
+					<span class="g_timeline-date">2020年11月6日</span>
+					<p class="g_timeline-address">展品撤离时间: 14:00—15:00(全馆断电、货门打开、展品凭出门条外运)</p>
+					<p class="g_timeline-address">展架撤离时间:  15：00-21：00 </p>
+					<div class="g_timeline-remarks">
+						<b>备注：</b>若有变化，以官方通告为准。
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="g_about-article">
+		<div class="g_about-head">住宿交通</div>
+		<p class="g_timeline-head g_about-subtitle">— 展会住宿 —</p>
+		<div class="g_about-content">
+			　　为配合本届展会国内参展商更好的进行展览展示活动，主办单位委托北京中燃华泰科技发展有限公司负责参展商在展览期间的住宿安排工作，以优惠的价格为参展商在展览会期间的工作、生活提供服务，请参展商根据需要提前预定酒店。展馆周边交通便利，参展商也可以自行安排住宿。 <br><br>
+
+			展商住宿代理：北京中燃华泰科技发展有限公司<br>
+			联系人：<br>
+			王汉香 电话/传真：010-61591096 <br>
+			手机：15313182681
+		</div>
+		<p class="g_timeline-head g_about-subtitle">— 展会交通 —</p>
+		<div class="g_about-content">
+			机场至展馆： <br>
+			乘坐地铁10号线（新平-太平园）双流机场2航站楼上车-太平园B口下车，步行360米，换成84路，武阳大道三段上车-新会展中心北侧下车，步行52米到达。<br><br>
+			
+			火车站至展馆：<br>
+			地铁7号线 成都东客站上车-火车南站下车，换乘1号线 世纪城A口下车，步行1242米到达。<br><br>
+			
+			公交站：<br>
+			新会展中心北侧：115路、118路、240A路、240B路、84路、G164路 新会展中心北侧世纪城路口：102路、115路、118路、84路 
+			<img src="images/g_15.jpg" alt="">
+			<img src="images/g_16.jpg" alt="">
+		</div>
+	</div>
+	<div class="g_about-article">
+		<div class="g_about-head">主办方信息</div>
+		<div class="g_about-content">
+			主办方：中国城市燃气协会<br>
+			地址：北京市西城区西直门南小街22号 <br>
+			邮编：100035<br>
+			负责人：聂松 手机： 13601033371  <br>
+			            闫君 手机：13601266751  <br>
+			            E-mail: yanjun@chinagas.org.cn <br>
+			展览会帐号： <br>
+			名称：中国城市燃气协会 <br>
+			纳税人识别号：511000005000009399<br>
+			地址：北京市西城区西直门南小街22号<br>
+			电话：63913530 <br>
+			开户行：工行百万庄支行<br>
+			账号：0200001409024901095 <br><br>
+			
+			Contact Information of the China Gas Association: <br>
+			No. 22 Nan Xiaojie, Xi Zhimen Street, Xicheng District,br> Beijing 100035, P.R. China <br>
+			Tel:0086-10-63913526 <br>
+			Mobile: 0086-15711073307<br>
+			E-mail: 772469037@qq.com<br>
+			Person in charge: Cui JingYe<br>
+			Please make payment to:<br>
+			Account Name: China Gas Association<br>
+			Bank(A/C): Industrial and Commercial Bank of China Bai Wan Zhuang Banking 
+			Office. No.15 San Li He Road, Haidian District, Beijing, China. 100035
+			Account Number: 020 0001 4292 0001 0561<br>
+			SWIFT Code: ICBKCNBJBJM
+		</div>
+	</div>
+	<div class="g_about-article">
+		<div class="g_about-head">服务商方信息</div>
+		<div class="g_about-content">
+			货运服务商信息<br>
+			　　　　本届展会主办单位指定全球货运有限公司北京代表处为国际、国内参展商参展物品货运代理，办理参展物品的报关、运输、出关、搬运、仓储等相关服务。凡需办理海关方面事宜请直接与货运代理联系。
+			指定展品货运商：全球货运有限公司北京代表处<br>
+			地址：北京市天竺空港工业区天纬四街5号 <br>
+			邮编：100013<br>
+			电话：+86 10 80480099-8202/8211<br>
+			传真：+86 10 80480115/80480077<br>
+			联系人：孙明杰 手机：13801058477<br><br>
+			
+			提示：<br>
+			1.在往届展览会撤展时出现过参展商委托非法经营的货运公司代理运输参展物品，造成了展品丢失、甚至被敲诈的事情发生。展会主办单位提示参展企业全球货运有限公司北京代表处为本届展会唯一指定的参展物品货运代理，他们将全程为本届展会提供服务。任何与其他货运公司签订运输服务协议，所产生的问题展会主办单位和展馆不负责任。 <br>
+			2. 展会货运手册将在展会开幕前30天上传到展会官网和展会QQ群、微信群；内容包括：收货地址、收货人及联系方式，货运服务内容、价格，货运咨询等；敬请关注。<br><br>
+			
+			主场运营服务商信息<br>
+			主场运营服务商：北京东方宏泰会展有限公司<br>
+			地址：北京市朝阳区广渠东路唐家村5号3号楼1层120室 邮编：100024<br>
+			咨询: <br>
+			杨晓勇 电话: +86 10-67795955-819 <br>
+			手机：13811935250 <br>
+			报馆: <br>
+			张桂康 电话: +86 10-67795955-801 <br>
+			手机：13911063659    <br>
+			张 力 电话: +86 10-67795955-803 <br>
+			手机：15010107852<br>
+			传 真: +86 10-67795957 <br>
+			E-mail：dongfanghongtai@vip.sohu.com<br><br>
+			
+			媒体支持 ：<br>
+			中国燃气网（http://www.chinagas.org.cn）<br>
+			博燃网
+		</div>
+		<div class="g_about-code02">
+			<img src="images/g_17.jpg" alt="">
+			<p>扫一扫识别</p>
+		</div>
+	</div>
 	<script>
+		
+		var topZ=$(".g_nav-box").offset().top;
+		console.log(topZ)
+		$(window).scroll(function(){
+			if($(window).scrollTop()>=topZ){
+				$(".g_nav-box").attr("style","position: fixed; left: 0; top: 0;")
+			}else{
+				$(".g_nav-box").removeAttr("style")
+			}
+		})
+		
+//		$(".g_nav-box ul li").click(function(){
+//			$(".g_nav-box ul li").removeClass("g_nav-dqys");
+//			$(this).addClass("g_nav-dqys");
+//			var ind=$(".g_nav-box ul li").index(this);
+//			$('html,body').animate({scrollTop: $(".g_about-article").eq(ind).offset().top-120}, 500);
+//		})
+		
+		
+		
+		
+		msgdmd(".g_nav-box ul li",".g_about-article","g_nav-dqys",500);
+		function msgdmd(dhli,bkli,dqys,time){
+		    var shuzu=[];
+				
+			$(bkli).each(function(index, element) {
+		        shuzu.push($(this).offset().top-230);
+		    });
+			
+			function box(top){
+				for(var i=0;i<shuzu.length;i++){
+					if(shuzu[i]>top){
+						return i;
+					}
+				}
+			};
+			
+			$(window).scroll(function(){
+				var gdttop=$(window).scrollTop();
+				var num=box(gdttop);
+				if(!num&&gdttop>topZ){
+					num=shuzu.length;
+				};
+				if(!num&&gdttop<topZ){
+					num=0;	
+				};
+				
+				$(dhli).removeClass(dqys).eq(Math.max(num-1,0)).addClass(dqys);	
+			});
+			
+			$(dhli).click(function(){		
+				var aasdasd=$(dhli).index(this);
+				$("html,body").animate({scrollTop:$(bkli).eq(aasdasd).offset().top-120},time,"easeInOutCubic");
+			});	
+		}
 		
 		var aboutData={};
 		aboutData.detailes={};
-		
-		//获取数据
-		getDetailesFn()
-		function getDetailesFn(){
-			call_net("POST", "/gy/getAbout",{}, function(data){
-				if(data.code==200){
-					var jsonData=data.data;
-					aboutData.detailes=jsonData;
-				}else{
-					console.log(data.desc)
-				}
-			}, function(error){})	
-		}
 		
 		
 		
