--- a/src/main/resources/static/HTML/mybusinessopportunity.html
+++ b/src/main/resources/static/HTML/mybusinessopportunity.html
@@ -11,10 +11,12 @@
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
 <link rel="stylesheet" type="text/css" href="css/base.css" media="all">
+<link rel="stylesheet" type="text/css" href="css/swiper-bundle.min.css" media="all">
 <link rel="stylesheet" type="text/css" href="css/style.css" media="all">
 <link rel="stylesheet" type="text/css" href="css/Yform.css" media="all">
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="js/vue.min.js"></script>
+<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
 <script type="text/javascript" src="js/Yeffect.js"></script>
 <script type="text/javascript" src="js/Yform.js"></script>
 <script type="text/javascript" src="js/ind.js"></script>
@@ -24,9 +26,19 @@
 <body id="mybusiness">
 	<div class="g_niches-head">{{detailes.title}}<img src="images/g_10.png" alt=""></div>
 	<div class="g_banner">
-		<img :src="bigImg" alt="" class="g_banner-big" />
-		<div class="g_banner-small">
-			<img v-for="img in detailes.picture" :src="img" alt="" :class="$index==0?'g_banner-dqys':''" @click="clickBigImgFn(img)">
+		<div class="swiper-container gallery-top">
+		    <div class="swiper-wrapper">
+		    	<div v-for="img in detailes.picture" class="swiper-slide"  :style="'background-image:url('+img+')'"></div>
+		    	
+		    </div>
+		    <!-- Add Arrows -->
+		    <!--<div class="swiper-button-next swiper-button-white"></div>
+		    <div class="swiper-button-prev swiper-button-white"></div>-->
+	    </div>
+		<div class="swiper-container gallery-thumbs">
+			<div class="swiper-wrapper">
+				<div  v-for="img in detailes.picture" class="swiper-slide" :style="'background-image:url('+img+')'"></div>
+			</div>
 		</div>
 	</div>
 	<div class="g_niches-article">
@@ -119,6 +131,25 @@
 					}
 					
 					productData.detailes=jsonData;
+					setTimeout(function(){
+						var galleryThumbs = new Swiper('.gallery-thumbs', {
+					      spaceBetween: 10,
+					      slidesPerView: 4,
+					      freeMode: true,
+					      watchSlidesVisibility: true,
+					      watchSlidesProgress: true,
+					    });
+					    var galleryTop = new Swiper('.gallery-top', {
+					      spaceBetween: 10,
+//					      navigation: {
+//					        nextEl: '.swiper-button-next',
+//					        prevEl: '.swiper-button-prev',
+//					      },
+					      thumbs: {
+					        swiper: galleryThumbs
+					      }
+					    });	
+					},300)
 				}else{
 					console.log(data.desc)
 				}
@@ -178,7 +209,7 @@
 					MobLink([
 					    {
 					        el: "",
-					        path: "cloudExhbition",
+					        path: "rqyz/sjDetails",
 					        params: {
 					            key1: bid,
 					        }
