--- a/src/main/resources/static/HTML/preregistration.html
+++ b/src/main/resources/static/HTML/preregistration.html
@@ -50,7 +50,7 @@
 			<li>
 				<p>预期展位面积</p>
 				<div class="g_form-areas">
-					<input type="text" class="g_txt-area" placeholder="9" maxlength="2" v-model="form.min" />平米　~<input type="text" class="g_txt-area" maxlength="2" placeholder="36" v-model="form.max" />平米
+					<input type="text" class="g_txt-area" placeholder="9" v-model="form.min" />平米　~<input type="text" class="g_txt-area" placeholder="36" v-model="form.max" />平米
 				</div>
 			</li>
 		</ul>
