--- a/src/main/resources/static/HTML/share.html
+++ b/src/main/resources/static/HTML/share.html
@@ -154,14 +154,14 @@
 				MobLink([
 				    {
 				        el: "#g_btn-download",
-				        path: "cloudExhbition",
+				        path: "rqyz/zsDetails",
 				        params: {
 				            key1: cid,
 				        }
 				    },
 				    {
 				        el: "#g_btn-shoucang",
-				        path: "cloudExhbition",
+				        path: "rqyz/zsDetails",
 				        params: {
 				            key1: cid,
 				        }
