--- a/src/main/resources/static/HTML/invitation.html
+++ b/src/main/resources/static/HTML/invitation.html
@@ -23,8 +23,8 @@
 
 <body>
 	<div class="g_invitation">
-		<img src="images/g_09.jpg" alt="">
-		<a href="javascript:void(0)" title="" class="g_btn-invitation" id="g_btn-download">邀请好友</a>
+		<img src="images/g_18.png" alt="">
+		<a href="javascript:void(0)" title="" class="g_btn-invitation" id="g_btn-download"><img src="images/g_19.png" alt=""></a>
 	</div>
 	<script>
 		var isShare="";
@@ -42,9 +42,9 @@
 		if(isShare){
 			var scriptUrl="<script type=\"text/javascript\" src=\"//bjc1.t4m.cn/applink.js\">"+"\<\/script>";
 			$("head").append(scriptUrl)
-			$(".g_btn-invitation").html("立即下载");
+			//$(".g_btn-invitation").html("立即下载");
 		}else{
-			$(".g_btn-invitation").html("邀请好友");
+			//$(".g_btn-invitation").html("邀请好友");
 		}
 		
 		
