--- a/src/main/resources/static/HTML/about.html
+++ b/src/main/resources/static/HTML/about.html
@@ -28,7 +28,7 @@
 
 谨祝贵公司参展顺利，展出成功！
 <p class="g_luokuan">中国城市燃气展协会</p>
-		<video src="movie.mp4" poster="images/g_13.jpg" controls></video>
+		<img src="images/g_20.png" alt="" class="g_about-img">
 	</div>
 	<div class="g_about-nav">
 		<div class="g_nav-box">
