--- a/src/main/resources/static/HTML/myprodetailes.html
+++ b/src/main/resources/static/HTML/myprodetailes.html
@@ -122,6 +122,7 @@
 			call_net("post", "/api/goodsDes",detailesObj, function(data){
 				if(data.code==200){
 					var jsonData=data.data;
+					jsonData.releasetime=jsonData.releasetime.substring(0,10)
 					if(jsonData.picture){
 						jsonData.picture=jsonData.picture.split(",");
 						productData.bigImg=jsonData.picture[0];
