--- a/src/main/resources/static/HTML/businessopportunity.html
+++ b/src/main/resources/static/HTML/businessopportunity.html
@@ -333,10 +333,10 @@
 						if(data.code==200){
 							
 							if(_this.detailes.isSjZan==0){
-								Yeffect.mAlert("点赞成功");
+								Yeffect.mAlert("点赞成功",1000);
 								_this.detailes.isSjZan=1;
 							}else{
-								Yeffect.mAlert("取消点赞");
+								Yeffect.mAlert("取消点赞",1000);
 								_this.detailes.isSjZan=0;
 							}
 							getDetailesFn()
@@ -363,10 +363,10 @@
 					call_net("POST", "/api/addOrDelCollention",shoucangObj, function(data){
 						if(data.code==200){
 							if(_this.detailes.isSCsj==0){
-								Yeffect.mAlert("收藏成功");
+								Yeffect.mAlert("收藏成功",1000);
 								_this.detailes.isSCsj=1;
 							}else{
-								Yeffect.mAlert("取消收藏");
+								Yeffect.mAlert("取消收藏",1000);
 								_this.detailes.isSCsj=0;
 							}
 							getDetailesFn()
@@ -393,7 +393,7 @@
 					commentObj.type=2;
 					call_net("POST", "/api/addComment",commentObj, function(data){
 						if(data.code==200){
-							Yeffect.mAlert("评论成功");
+							Yeffect.mAlert("评论成功",1000);
 							_this.pageZ=1;
 							_this.commentList=[];
 							_this.commentTxt="";
