--- a/src/main/resources/static/HTML/newsdetailes.html
+++ b/src/main/resources/static/HTML/newsdetailes.html
@@ -257,10 +257,10 @@
 					call_net("POST", "/api/addOrDelPraise",dianzanObj, function(data){
 						if(data.code==200){
 							if(_this.detailes.isZan==0){
-								Yeffect.mAlert("点赞成功");
+								Yeffect.mAlert("点赞成功",1000);
 								_this.detailes.isZan=1;
 							}else{
-								Yeffect.mAlert("取消点赞");
+								Yeffect.mAlert("取消点赞",1000);
 								_this.detailes.isZan=0;
 							}
 							getDetailesFn()
@@ -287,10 +287,10 @@
 					call_net("POST", "/api/addOrDelCollention",shoucangObj, function(data){
 						if(data.code==200){
 							if(_this.detailes.isSCZx==0){
-								Yeffect.mAlert("收藏成功");
+								Yeffect.mAlert("收藏成功",1000);
 								_this.detailes.isSCZx=1;
 							}else{
-								Yeffect.mAlert("取消收藏");
+								Yeffect.mAlert("取消收藏",1000);
 								_this.detailes.isSCZx=0;
 							}
 							getDetailesFn()
@@ -317,7 +317,7 @@
 					commentObj.type=3;
 					call_net("POST", "/api/addComment",commentObj, function(data){
 						if(data.code==200){
-							Yeffect.mAlert("评论成功");
+							Yeffect.mAlert("评论成功",1000);
 							_this.pageZ=1;
 							_this.commentList=[];
 							_this.commentTxt="";
