--- a/src/main/resources/static/HTML/invitation.html
+++ b/src/main/resources/static/HTML/invitation.html
@@ -48,7 +48,10 @@
 		}
 		
 		
-		
+		if($(window).height()<812-100){
+			$("body").attr("style","overflow: hidden;");
+			$(".g_invitation").attr("style","transform: translateY(-70px); -webkit-transform: translateY(-70px);")
+		}
 		
 		
 		
