--- a/src/main/resources/static/HTML/businessopportunity.html
+++ b/src/main/resources/static/HTML/businessopportunity.html
@@ -34,7 +34,9 @@
 	<div class="g_banner">
 		<div class="swiper-container gallery-top">
 		    <div class="swiper-wrapper">
-		    	<div v-for="img in detailes.picture" class="swiper-slide"  :style="'background-image:url('+img+')'"></div>
+		    	<div v-for="img in detailes.picture" class="swiper-slide">
+		    		<img :src="img" alt="" class="g_banner-img">
+		    	</div>
 		    	
 		    </div>
 		    <!-- Add Arrows -->
@@ -174,6 +176,7 @@
 					        swiper: galleryThumbs
 					      }
 					    });	
+					    Yeffect.imgGeomeScale(".g_banner-img")
 					},300)
 					
 				}else{
@@ -386,6 +389,11 @@
 				//评论
 				sendCommentFn:function(){
 					var _this=this;
+					if(_this.commentTxt.trim()==""){
+		              _this.commentTxt="";
+		              Yeffect.mAlert("不能发布空白评论",1000);
+		              return false;
+		            }
 					var commentObj={};
 					commentObj.token=token;
 					commentObj.id=sid;
