专业观众后台删除

--- a/src/main/resources/static/HTML/invitation.html
+++ b/src/main/resources/static/HTML/invitation.html
@@ -51,8 +51,6 @@
 					isway=0
 				}
 			}
-			
-
 			var equipment = IsAndroid();
 
 			if(isShare) {
@@ -70,7 +68,7 @@
 
 			if($(window).height() < 812 - 100) {
 				$("body").attr("style", "overflow: hidden;");
-				$(".g_invitation").attr("style", "transform: translateY(-70px); -webkit-transform: translateY(-70px);")
+//				$(".g_invitation").attr("style", "transform: translateY(-70px); -webkit-transform: translateY(-70px);")
 			}
 
 			$(".g_btn-invitation").click(function() {
