--- a/src/main/resources/static/HTML/newsdetailes.html
+++ b/src/main/resources/static/HTML/newsdetailes.html
@@ -26,7 +26,8 @@
 		<div class="g_news-data">
 			<time>发布时间：{{detailes.releasetime}}</time>
 			<div class="g_browse">
-				<img src="images/g_01.png" alt="" />{{detailes.countbrowse}}
+				<img src="images/g_01.png" alt="" />
+				<span>{{detailes.countbrowse}}</span>
 			</div>
 		</div>
 	</div>
