--- a/src/main/resources/static/HTML/share.html
+++ b/src/main/resources/static/HTML/share.html
@@ -22,6 +22,11 @@
 </head>
 
 <body id="share">
+	<!--引导箭头-->
+			<div class="row-box" style="position: relative;">
+				<p>点击此处在浏览器中打开</p>
+				<img src="images/row.png"/>
+			</div>
 	<div class="g_share-banner" v-if="detailes.bannerList.length>0">
 		<ul>
 			<li v-for="li in detailes.bannerList"><img :src="li" alt=""></li>
@@ -56,7 +61,7 @@
 			地址：{{detailes.address}}
 		</div>
 		<div class="g_hsk-body">
-			<iframe :src="detailes.halurl"></iframe>
+			<!--<iframe :src="detailes.halurl"></iframe>-->
 		</div>
 		<div class="g_hsk-body"><img :src="detailes.floorplan" alt=""></div>
 	</div>
@@ -68,7 +73,24 @@
 		if(getUrlParamURLys("id")){
 			cid=getUrlParamURLys("id");
 		}
-		
+		var isway=0;// 0是qq 1是微信 
+		//判断是在微信打开还是在qq打开
+			is_weixn_qq();
+			function is_weixn_qq() {
+				var ua = navigator.userAgent.toLowerCase();
+				if(ua.match(/MicroMessenger/i) == "micromessenger") {
+					isway=1
+				} else if(ua.match(/QQ/i) == "qq") {
+					isway=1
+				}else{
+					isway=0
+				}
+			}
+			if(isway==0){
+				$(".row-box").hide();
+			}else if(isway==1){
+				$(".row-box").show();
+			}
 		
 		
 		var aboutData={};
@@ -107,10 +129,10 @@
 			}, function(error){})	
 		}
 		
-		$(document).on("click",".g_hsk-head span",function(){
-			$(".g_hsk-body").hide();
-			$(".g_hsk-body").eq($(this).index()-1).show();
-		})
+//		$(document).on("click",".g_hsk-head span",function(){
+//			$(".g_hsk-body").hide();
+//			$(".g_hsk-body").eq($(this).index()-1).show();
+//		})
 		$(document).on("click",".g_btn-zk",function(){
 			if($(this).hasClass("g_btn-sq")){
 				$(this).html("展开");
